# dataclass_dbutil

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
dataclass_dbutil/: protocols.py  query.py
tests/: test_it.py
