[tool.poetry]
name = "dataclass_dbutil"
version = "0.1.0"
description = ""
authors = ["Atsushi Odagiri <aodagx@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
black = "=19.3b0"
flake8 = "^3.7"
mypy = "^0.701.0"
nox = "^2019.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
